# Platformer

./: CMakeLists.txt  README.md
src/: main.cpp
src/Game/: BaseObject.cpp  BaseObject.h  Constants.h  Game.cpp  Game.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Vec2D.cpp  Vec2D.h
src/Game/Base/: BaseObject.cpp  BaseObject.h
src/Game/Input/: Input.cpp
src/Game/Math/: Mat2D.h  Math.h  Math2D.cpp  Utils.cpp  Utils.h  Vec2D.cpp  Vec2D.h
src/Game/Phys/: Body.cpp  Body.h  PhysicsWorld.cpp  PhysicsWorld.h
src/Game/Phys/Collision/: Collision.cpp  Collision.h  CollisionPair.cpp  CollisionPair.h  Shape.h
src/Game/Render/: Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp
